[package]
name = "tictacterminal"
version = "1.0.0"
authors = ["Eric Burden <eric.w.burden@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Tic Tac Toe, Terminal"
readme = "README.md"
repository = "https://github.com/ericwburden/tictactoe"
keywords = ["game", "demo"]
categories = ["game"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.21.0"
itertools = "0.10.1"
text_io="0.1.9"
