[package]
name = "tictacterminal"
version = "2.0.0"
authors = ["Eric Burden <eric.w.burden@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Tic Tac Toe, Terminal"
readme = "README.md"
repository = "https://github.com/ericwburden/tictactoe"
keywords = ["game", "demo"]
categories = ["games", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.21.0"
itertools = "0.10.1"
